# 3drecon

./: .gitignore  CMakeLists.txt  Feature.cpp  Feature.hpp  Image.cpp  Image.hpp  Matmxn.hpp  Patch.cpp  Patch.hpp  Sparse.cpp  Sparse.hpp  Tex.cpp  Tex.hpp  Utils.hpp  expand.cpp  main.cpp  match.cpp
data/: patches.txt
