cmake_minimum_required(VERSION 3.4)
project(3drecon)
#set(CMAKE_CXX_FLAGS_DEBUG "-g3")
#set(CMAKE_CXX_FLAGS_RELEASE "-O3")
add_definitions(-std=c++11)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
add_library(sparse Feature.cpp Feature.hpp Image.cpp Image.hpp Patch.cpp Patch.hpp Sparse.cpp Sparse.hpp Tex.cpp Tex.hpp Utils.hpp Matmxn.hpp)
target_link_libraries(sparse opencv_core opencv_highgui opencv_nonfree opencv_calib3d opencv_features2d nlopt opencv_imgproc)
add_executable(sparseTest main.cpp)
target_link_libraries(sparseTest sparse)
